Have vararg append call collection append implementation